; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_get_primaries_name.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_get_primaries_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"bt709\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"bt470m\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"bt470bg\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"smpte170m\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"smpte240m\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"smpte428\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"film\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"smpte431\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"smpte432\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"bt2020\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"jedec-p22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hb_get_primaries_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %16 [
    i32 136, label %5
    i32 137, label %6
    i32 135, label %7
    i32 128, label %8
    i32 132, label %9
    i32 131, label %10
    i32 134, label %11
    i32 130, label %12
    i32 129, label %13
    i32 138, label %14
    i32 133, label %15
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %17

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %17

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %17

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %17

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %17

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %17

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %17

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %17

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %17

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %17

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %17

16:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %17

17:                                               ; preds = %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
